# ort_linalg

./: .gitignore  CMakeLists.txt  README.md  runtime_build_notes.txt  vcpkg.json
linalg_op/: CMakeLists.txt  custom_op_library.cc
linalg_test/: bitshift.py  bitshift_op.py  custom_op_one.cpp  custom_op_test.onnx  custom_ops.py  flatten.py  main.py  onnxruntime-custom-model.py  onnxruntime-python-api.py  operators.py  requirements.txt  setup.py  test.py  test_custom_ops.py  test_gpytorch.py
linalg_test/custom_op_one.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
